--- a/index.html
+++ b/index.html
@@ -1,18 +1,256 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Terrin Martin</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Terrin Martin — iOS developer. Building Roundly." />
+  <style>
+    :root{
+      --bg: #0b0c10;
+      --card: rgba(255,255,255,.06);
+      --border: rgba(255,255,255,.10);
+      --text: rgba(255,255,255,.92);
+      --muted: rgba(255,255,255,.70);
+      --muted2: rgba(255,255,255,.55);
+      --shadow: 0 18px 60px rgba(0,0,0,.35);
+      --radius: 22px;
+    }
+    *{ box-sizing:border-box; }
+    body{
+      margin:0;
+      color:var(--text);
+      font-family:-apple-system, BlinkMacSystemFont, "SF Pro Text", "SF Pro Display", Segoe UI, Roboto, Helvetica, Arial, sans-serif;
+      background:
+        radial-gradient(900px 520px at 18% 10%, rgba(55, 120, 255,.35), transparent 55%),
+        radial-gradient(820px 520px at 82% 16%, rgba(0, 210, 170,.28), transparent 52%),
+        radial-gradient(900px 620px at 50% 100%, rgba(140, 120, 255,.18), transparent 60%),
+        var(--bg);
+      min-height:100vh;
+    }
+    a{ color:inherit; text-decoration:none; }
+    .wrap{
+      max-width: 980px;
+      margin: 0 auto;
+      padding: 36px 18px 60px;
+    }
+    .top{
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      gap:14px;
+      padding: 10px 2px 22px;
+    }
+    .brand{
+      display:flex;
+      align-items:center;
+      gap:12px;
+    }
+    .dot{
+      width:38px; height:38px;
+      border-radius: 12px;
+      background: linear-gradient(145deg, rgba(255,255,255,.22), rgba(255,255,255,.06));
+      border: 1px solid var(--border);
+      box-shadow: var(--shadow);
+      position:relative;
+      overflow:hidden;
+    }
+    .dot:before{
+      content:"";
+      position:absolute; inset:-30%;
+      background: radial-gradient(circle at 30% 30%, rgba(255,255,255,.65), transparent 45%);
+      transform: rotate(18deg);
+    }
+    .name{
+      line-height:1.1;
+      font-weight: 650;
+      letter-spacing:-.02em;
+      font-size: 18px;
+    }
+    .tag{
+      color:var(--muted2);
+      font-size: 13px;
+      margin-top: 2px;
+    }
+    .pillrow{
+      display:flex; gap:10px; flex-wrap:wrap; justify-content:flex-end;
+    }
+    .pill{
+      padding: 10px 12px;
+      border-radius: 999px;
+      background: rgba(255,255,255,.06);
+      border: 1px solid var(--border);
+      backdrop-filter: blur(12px);
+      -webkit-backdrop-filter: blur(12px);
+      font-size: 13px;
+      color: var(--muted);
+    }
+
+    .hero{
+      margin-top: 10px;
+      padding: 28px;
+      border-radius: var(--radius);
+      background: linear-gradient(180deg, rgba(255,255,255,.10), rgba(255,255,255,.05));
+      border: 1px solid var(--border);
+      backdrop-filter: blur(14px);
+      -webkit-backdrop-filter: blur(14px);
+      box-shadow: var(--shadow);
+    }
+    .hero h1{
+      margin:0;
+      font-size: 42px;
+      letter-spacing: -.04em;
+      line-height: 1.05;
+    }
+    .hero p{
+      margin: 14px 0 0;
+      color: var(--muted);
+      font-size: 16px;
+      line-height: 1.55;
+      max-width: 62ch;
+    }
+    .cta{
+      margin-top: 18px;
+      display:flex;
+      gap:12px;
+      flex-wrap:wrap;
+    }
+    .btn{
+      display:inline-flex;
+      align-items:center;
+      gap:10px;
+      padding: 12px 14px;
+      border-radius: 14px;
+      border: 1px solid var(--border);
+      background: rgba(255,255,255,.08);
+      color: var(--text);
+      font-weight: 600;
+      font-size: 14px;
+      box-shadow: 0 10px 30px rgba(0,0,0,.25);
+    }
+    .btn.primary{
+      background: linear-gradient(135deg, rgba(55,120,255,.45), rgba(0,210,170,.32));
+      border-color: rgba(255,255,255,.18);
+    }
+    .btn:hover{ transform: translateY(-1px); }
+    .grid{
+      display:grid;
+      grid-template-columns: 1.25fr .75fr;
+      gap: 16px;
+      margin-top: 16px;
+    }
+    @media (max-width: 860px){
+      .grid{ grid-template-columns: 1fr; }
+      .hero h1{ font-size: 34px; }
+      .pillrow{ justify-content:flex-start; }
+    }
+    .card{
+      padding: 18px;
+      border-radius: var(--radius);
+      background: var(--card);
+      border: 1px solid var(--border);
+      backdrop-filter: blur(12px);
+      -webkit-backdrop-filter: blur(12px);
+      box-shadow: 0 14px 45px rgba(0,0,0,.25);
+    }
+    .card h2{
+      margin:0 0 10px;
+      font-size: 16px;
+      letter-spacing: -.02em;
+    }
+    .muted{ color: var(--muted); font-size: 14px; line-height: 1.55; }
+    .proj{
+      display:flex;
+      align-items:flex-start;
+      justify-content:space-between;
+      gap: 14px;
+      padding: 14px;
+      border-radius: 18px;
+      background: rgba(255,255,255,.06);
+      border: 1px solid rgba(255,255,255,.10);
+    }
+    .proj strong{ display:block; font-size: 15px; letter-spacing: -.01em; }
+    .proj span{ display:block; color: var(--muted2); font-size: 13px; margin-top: 4px; }
+    .badge{
+      font-size: 12px;
+      padding: 7px 10px;
+      border-radius: 999px;
+      border: 1px solid rgba(255,255,255,.14);
+      background: rgba(0,0,0,.18);
+      color: var(--muted);
+      white-space:nowrap;
+    }
+    footer{
+      margin-top: 18px;
+      color: var(--muted2);
+      font-size: 13px;
+      padding: 10px 6px 0;
+    }
+  </style>
 </head>
-<body style="font-family: -apple-system, sans-serif; text-align: center; padding: 60px;">
-  <h1>Terrin Martin</h1>
-  <p>iOS developer and creator of Roundly.</p>
 
-  <h2>Projects</h2>
-  <p><a href="/roundly">Roundly – automatic savings app</a></p>
+<body>
+  <div class="wrap">
+    <div class="top">
+      <div class="brand">
+        <div class="dot" aria-hidden="true"></div>
+        <div>
+          <div class="name">Terrin Martin</div>
+          <div class="tag">iOS developer • building Roundly</div>
+        </div>
+      </div>
 
-  <h2>Contact</h2>
-  <p><a href="mailto:hi@terrin.dev">hi@terrin.dev</a></p>
+      <div class="pillrow">
+        <a class="pill" href="mailto:hi@terrin.dev">hi@terrin.dev</a>
+        <a class="pill" href="https://github.com/terrindev" target="_blank" rel="noreferrer">GitHub</a>
+      </div>
+    </div>
+
+    <section class="hero">
+      <h1>Design-forward apps with real utility.</h1>
+      <p>
+        I’m Terrin—an iOS developer working on <strong>Roundly</strong>, a simple way to round up purchases and grow savings.
+        This site will evolve into a portfolio + product home as Roundly approaches launch.
+      </p>
+
+      <div class="cta">
+        <a class="btn primary" href="/roundly">View Roundly →</a>
+        <a class="btn" href="mailto:hi@terrin.dev">Contact</a>
+      </div>
+    </section>
+
+    <div class="grid">
+      <section class="card">
+        <h2>Projects</h2>
+        <div class="proj">
+          <div>
+            <strong>Roundly</strong>
+            <span>Automatic round-up savings • iOS • in progress</span>
+          </div>
+          <div class="badge">Coming soon</div>
+        </div>
+        <p class="muted" style="margin-top:12px;">
+          Next: a dedicated Roundly page with screenshots, feature list, pricing, and TestFlight sign-up.
+        </p>
+      </section>
+
+      <section class="card">
+        <h2>Now</h2>
+        <p class="muted">
+          • Finishing Roundly MVP<br/>
+          • Polishing UI and onboarding<br/>
+          • Planning App Store launch + website
+        </p>
+      </section>
+    </div>
+
+    <footer>
+      © <span id="y"></span> Terrin Martin • <a href="mailto:hi@terrin.dev">hi@terrin.dev</a>
+    </footer>
+  </div>
+
+  <script>
+    document.getElementById('y').textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
